<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/BankHomeFragment">

    <fragment
        android:id="@+id/BankHomeFragment"
        android:name="com.ab.bankingapplication.bankHome.BankHomeFragment"
        android:label="@string/bank_app_home_fragment"
        tools:layout="@layout/fragment_bank_home">

        <action
            android:id="@+id/action_BankHomeFragment_to_SendMoneyFragment"
            app:destination="@id/SendMoneyFragment" />

    </fragment>
    <fragment
        android:id="@+id/SendMoneyFragment"
        android:name="com.ab.bankingapplication.moneySend.SendMoneyFragment"
        android:label="@string/send_money_fragment"
        tools:layout="@layout/fragment_send_money">

        <action
            android:id="@+id/action_SendMoneyFragment_to_BankHomeFragment"
            app:destination="@id/BankHomeFragment" />

        <action
            android:id="@+id/action_SendMoneyFragment_to_TransactionSuccessFragment"
            app:destination="@id/TransactionSuccessFragment" />

        <argument
            android:name="transactionDetails"
            app:argType="com.ab.bankingapplication.model.TransactionDetails"
            />


    </fragment>

    <fragment
        android:id="@+id/TransactionSuccessFragment"
        android:name="com.ab.bankingapplication.moneySend.TransactionSuccessFragment"
        android:label="@string/transaction_success_fragment"
        tools:layout="@layout/transaction_success_page">

        <action
            android:id="@+id/action_TransactionSuccessFragment_to_BankHomeFragment"
            app:destination="@id/BankHomeFragment" />

    </fragment>





</navigation>