<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginHomeTour"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/homeTourViewPager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tabLayout"/>


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1"
                app:tabGravity="center"
                app:tabIndicator="@null"
                app:tabPaddingStart="6dp"
                app:tabPaddingEnd="6dp"
                app:tabBackground="@drawable/tab_selector"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/nextButton"/>

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/nextButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@color/cb"
                android:padding="5dp"
                app:layout_constraintCircleRadius="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:roundPercent="1"
                app:tint="@color/white"
                app:srcCompat="@drawable/ic_next" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginScreen"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/loginPageImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/login_page"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loginPageHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/otp_verification"
                android:textColor="@color/raisin_black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginPageImage" />

            <TextView
                android:id="@+id/sendOtpMsg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/send_otp_for_mobile_number_msg"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginPageHeader" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mobileLoginPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sendOtpMsg">

                <TextView
                    android:id="@+id/enterMobileNumberView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/enter_mobile_number"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/mobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:textColor="@color/raisin_black"
                    android:textSize="18sp"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:imeOptions="actionDone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/enterMobileNumberView" />

                <TextView
                    android:id="@+id/resendText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/resend_otp_time"
                    android:textSize="14sp"
                    android:visibility="gone"
                    android:textColor="@color/orange"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mobileNumber"/>



            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/otpPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sendOtpMsg">


                <in.aabhasjindal.otptextview.OtpTextView
                    android:id="@+id/otpView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    app:bar_active_color="@color/cb"
                    app:bar_enabled="true"
                    app:bar_error_color="@color/red"
                    app:bar_height="2dp"
                    app:box_margin_right="20dp"
                    app:box_margin_left="10dp"
                    app:bar_inactive_color="@color/grey_color"
                    app:height="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:length="4"
                    app:otp_text_size="18sp"
                    app:width="40dp" />


                <TextView
                    android:id="@+id/otpNotReceivedMsg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_receive_the_otp"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="@id/otpView"
                    app:layout_constraintTop_toBottomOf="@id/otpView" />

                <TextView
                    android:id="@+id/resendOTP"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_otp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/orange"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@id/otpNotReceivedMsg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/otpView" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/loginBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="otpPage,mobileLoginPage" />

            <Button
                android:id="@+id/otpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:padding="12dp"
                android:text="@string/verify_otp"
                app:layout_constraintTop_toBottomOf="@id/loginBarrier" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>